--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: cardidates
 Type: Package
 Title: Identification of cardinal dates in ecological time series
-Version: 0.4.1
+Version: 0.4.2
 Date: 2011-09-17
-Depends: R (>= 2.4.0), boot, pastecs
+Depends: R (>= 2.10.0), boot, pastecs
 Suggests: lattice
-Encoding: latin1
 LazyLoad: yes
 Author: Susanne Rolinski, Rene Sachse, Thomas Petzoldt
 Maintainer: Thomas Petzoldt <thomas.petzoldt@tu-dresden.de>
@@ -14,6 +13,8 @@ Description: The package helps to identify cardinal dates (begin, time
         using fitted Weibull functions.
 License: GPL (>= 2)
 URL: http://cardidates.r-forge.r-project.org
-Packaged: 2011-09-17 19:09:49 UTC; petzoldt
 Repository: CRAN
-Date/Publication: 2011-09-23 12:18:17
+Repository/R-Forge/Project: cardidates
+Repository/R-Forge/Revision: 20
+Packaged: 2012-08-30 14:20:09 UTC; rforge
+Date/Publication: 2012-12-01 17:01:22
