--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,23 @@
 Package: cardidates
 Type: Package
-Title: Identification of cardinal dates in ecological time series
-Version: 0.4.2
-Date: 2011-09-17
-Depends: R (>= 2.10.0), boot, pastecs
+Title: Identification of Cardinal Dates in Ecological Time Series
+Version: 0.4.5
+Depends: R (>= 3.0.0), boot, pastecs
 Suggests: lattice
-LazyLoad: yes
-Author: Susanne Rolinski, Rene Sachse, Thomas Petzoldt
+Encoding: latin1
+Authors@R: c(person("Susanne", "Rolinski", role = "aut"),
+             person("René", "Sachse", role = "aut"),
+             person("Thomas", "Petzoldt", role = c("aut", "cre"),
+                     email = "thomas.petzoldt@tu-dresden.de"))
+Author: Susanne Rolinski [aut], René Sachse [aut], Thomas Petzoldt [aut, cre]
 Maintainer: Thomas Petzoldt <thomas.petzoldt@tu-dresden.de>
-Description: The package helps to identify cardinal dates (begin, time
-        of maximum, end of mass developments) in ecological time series
-        using fitted Weibull functions.
+Description: The package helps to identify cardinal dates
+             (begin, time of maximum, end of mass developments)
+             in ecological time series using fitted Weibull functions.
 License: GPL (>= 2)
 URL: http://cardidates.r-forge.r-project.org
+LazyData: yes
+Packaged: 2013-12-18 07:07:01 UTC; thpe
+NeedsCompilation: no
 Repository: CRAN
-Repository/R-Forge/Project: cardidates
-Repository/R-Forge/Revision: 20
-Packaged: 2012-08-30 14:20:09 UTC; rforge
-Date/Publication: 2012-12-01 17:01:22
+Date/Publication: 2013-12-18 09:12:10
