--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: cardidates
 Type: Package
 Title: Identification of Cardinal Dates in Ecological Time Series
-Version: 0.4.5
-Depends: R (>= 3.0.0), boot, pastecs
-Suggests: lattice
+Version: 0.4.6
+Depends: R (>= 3.0.0), boot, pastecs, lattice
 Encoding: latin1
 Authors@R: c(person("Susanne", "Rolinski", role = "aut"),
              person("René", "Sachse", role = "aut"),
@@ -11,13 +10,13 @@ Authors@R: c(person("Susanne", "Rolinski", role = "aut"),
                      email = "thomas.petzoldt@tu-dresden.de"))
 Author: Susanne Rolinski [aut], René Sachse [aut], Thomas Petzoldt [aut, cre]
 Maintainer: Thomas Petzoldt <thomas.petzoldt@tu-dresden.de>
-Description: The package helps to identify cardinal dates
+Description: Identification of cardinal dates
              (begin, time of maximum, end of mass developments)
              in ecological time series using fitted Weibull functions.
 License: GPL (>= 2)
 URL: http://cardidates.r-forge.r-project.org
 LazyData: yes
-Packaged: 2013-12-18 07:07:01 UTC; thpe
+Packaged: 2015-03-12 20:51:23 UTC; thpe
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-12-18 09:12:10
+Date/Publication: 2015-03-12 23:03:00
