--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: cardidates
 Type: Package
 Title: Identification of Cardinal Dates in Ecological Time Series
-Version: 0.4.6
+Version: 0.4.7
 Depends: R (>= 3.0.0), boot, pastecs, lattice
+Imports: graphics, grDevices, stats, methods, utils
 Encoding: latin1
 Authors@R: c(person("Susanne", "Rolinski", role = "aut"),
              person("René", "Sachse", role = "aut"),
@@ -16,7 +17,10 @@ Description: Identification of cardinal dates
 License: GPL (>= 2)
 URL: http://cardidates.r-forge.r-project.org
 LazyData: yes
-Packaged: 2015-03-12 20:51:23 UTC; thpe
-NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-03-12 23:03:00
+Repository/R-Forge/Project: cardidates
+Repository/R-Forge/Revision: 39
+Repository/R-Forge/DateTimeStamp: 2015-09-06 16:41:33
+Date/Publication: 2015-09-06 19:38:14
+NeedsCompilation: no
+Packaged: 2015-09-06 16:46:27 UTC; rforge
